# RGS

./: CMakeLists.txt
src/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  InputCodes.h  Main.cpp  Math.cpp  Math.h  ShaderBase.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
src/RGS/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  InputCodes.h  Main.cpp  Maths.cpp  Maths.h  Renderer.cpp  Renderer.h  ShaderBase.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
src/RGS/Shaders/: BlinnShader.cpp  BlinnShader.h  ShaderBase.h
